test/ill-formed/multi-file/missing_module/main.py
from helper import x
print(x)
